--- a/index.html
+++ b/index.html
@@ -53,10 +53,11 @@
             margin-bottom: 7px;
         }
         .content {
-            height: 100%;
+            min-height: 100%;
             width: 100%;
             padding: 20px;
             padding-left: 540px;
+            padding-bottom: 170px;
         }
         .navigation {
             height: 100vh;
